<resources>
    <string name="rent" translatable="false">rent</string>
    <string name="sell" translatable="false">sell</string>
    <string name="language_en" translatable="false">English</string>
    <string name="heihei_tv52" translatable="false">AccountNumber</string>
    <string name="language_ch" translatable="false">Chinese</string>
    <string name="toolbar_title_homeone" translatable="false">Dispatch mission list</string>
    <string name="toolbar_homeone_backtitle" translatable="false">mission batch transfer</string>
    <string name="prompt" translatable="false">Tips</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="heihei_tv72" translatable="false">Please enter content</string>
    <string name="search_tv" translatable="false">search</string>
    <string name="dial" translatable="false">Call</string>
    <string name="customerservice" translatable="false">Customer service</string>
    <string name="phone_error" translatable="false">Wrong number</string>
    <string name="update_time" translatable="false">Change the appointment time</string>
    <string name="update_address" translatable="false">Change the appointment place</string>
    <string name="homeonedetails_title" translatable="false">Dispatch details</string>
    <string name="cz" translatable="false">Rent out</string>
    <string name="guan" translatable="false">tube</string>
    <string name="quyu" translatable="false">Regional chief</string>
    <string name="cd" translatable="false">Menu</string>
    <string name="cs" translatable="false">sell</string>
    <string name="buy" translatable="false">buy</string>
    <string name="update_address_success" translatable="false">successful to change the appointment place</string>
    <string name="update_time_success" translatable="false">successful to change the appointment time</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="cancelreservation_tv1" translatable="false">Please select the season of cancel(required）</string>
    <string name="cancelreservation_tv2" translatable="false">suddenly I didn t want to viewing</string>
    <string name="cancelreservation_tv3" translatable="false">There were other emergencies</string>
    <string name="cancelreservation_tv4" translatable="false">Already found a suitable property</string>
    <string name="cancelreservation_tv5" translatable="false">Forgot</string>
    <string name="cancelreservation_tv10" translatable="false">Please fill in the instructions</string>
    <string name="cancelreservation_tv6" translatable="false">Dissatisfied with our services</string>
    <string name="cancelreservation_tv7" translatable="false">Other</string>
    <string name="cancelreservation_tv8" translatable="false">Supplementary notes (required)</string>
    <string name="cancelreservation_tv9" translatable="false">Please write an simple description at least 10 words</string>
    <string name="bt_tj" translatable="false">submit</string>
    <string name="bt_qd" translatable="false">confirm</string>
    <string name="houses_tv23" translatable="false">单元</string>
    <string name="houses_tv24" translatable="false">请输入单元</string>
    <string name="casa_tv1" translatable="false">property status</string>
    <string name="casa_tv21" translatable="false">Rent out</string>
    <string name="casa_tv22" translatable="false">self-occupy</string>
    <string name="casa_tv23" translatable="false">Vacant</string>
    <string name="casa_tv24" translatable="false">existingHouse</string>
    <string name="casa_tv3" translatable="false">Tenancy contract(optional)</string>
    <string name="casa_tv4" translatable="false">authorization us contact the tenant for viewing</string>
    <string name="casa_tv5" translatable="false">Tenant name</string>
    <string name="casa_tv6" translatable="false">Tenant contact number</string>
    <string name="casa_tv5_error" translatable="false">Please enter the tenant name</string>
    <string name="casa_tv6_error" translatable="false">Please enter the tenant s phone number</string>
    <string name="casa_tv7" translatable="false">not authorization us contact the tenant for viewing</string>
    <string name="casa_tv8" translatable="false">Reseration tips：</string>
    <string name="casa_tv9" translatable="false">click to select viewable time</string>
    <string name="casa_tv10" translatable="false">The above time is not convenient for me, please let the customer service contact me.</string>
    <string name="casa_tv11" translatable="false">required in advance</string>
    <string name="casa_tv12" translatable="false">make an appointment with me</string>
    <string name="casa_tv13" translatable="false">Willing to supply you key to us</string>
    <string name="casa_tv14" translatable="false">unwillingness to supply you key to us</string>
    <string name="qx" translatable="false">select all</string>
    <string name="qsr" translatable="false">please enter</string>
    <string name="zu" translatable="false">Rent</string>
    <string name="sq" translatable="false">Collapsing</string>
    <string name="zk" translatable="false">展开</string>
    <string name="deliverydetails_tv1" translatable="false">Property attributes</string>
    <string name="deliverydetails_tv11" translatable="false">Key ownership</string>
    <string name="deliverydetails_tv9" translatable="false">业主取消预约</string>
    <string name="deliverydetails_tv13" translatable="false">确定取消订单</string>
    <string name="deliverydetails_tv2" translatable="false">appointment time</string>
    <string name="deliverydetails_tv3" translatable="false">appointment place</string>
    <string name="deliverydetails_tv4" translatable="false">transaction closed countdown</string>
    <string name="deliverydetails_tv5" translatable="false">mission start countdown</string>
    <string name="deliverydetails_tv6" translatable="false">Customer booking cancel</string>
    <string name="deliverydetails_tv7" translatable="false">mission transfer</string>
    <string name="deliverydetails_tv8" translatable="false">Arrived client</string>
    <string name="deliverydetails_tv10" translatable="false">参与当前看房</string>
    <string name="deliverydetails_tv12" translatable="false">我已到达</string>
    <string name="deliverydetailsnext_tv1" translatable="false">Upload photos of the owner holding the contract</string>
    <string name="deliverydetailsnext_tv2" translatable="false">Upload the property information</string>
    <string name="forgetpwd_tv2" translatable="false">get the auth code</string>
    <string name="xyb" translatable="false">next</string>
    <string name="ljqd" translatable="false">Immediately snatch the mission</string>
    <string name="qxz" translatable="false">Please select</string>
    <string name="home_atv_tv1" translatable="false">Dispatch list</string>
    <string name="home_atv_tv2" translatable="false">Uploaded</string>
    <string name="home_atv_tv3" translatable="false">grabTheOrder</string>
    <string name="home_atv_tv4" translatable="false">Contract form</string>
    <string name="home_atv_tv5" translatable="false">My</string>
    <string name="houses_tv58" translatable="false">housing package</string>
    <string name="fwpz_tv1" translatable="false">Maids room</string>
    <string name="fwpz_tv2" translatable="false">Study room</string>
    <string name="fwpz_tv3" translatable="false">Storage Room</string>
    <string name="fwpz_tv4" translatable="false">Balcony</string>
    <string name="fwpz_tv5" translatable="false">Concierge</string>
    <string name="fwpz_tv6" translatable="false">view of Water</string>
    <string name="fwpz_tv7" translatable="false">view of Landmark</string>
    <string name="fwpz_tv8" translatable="false">Pets allowed</string>
    <string name="fwpz_tv9" translatable="false">Built in Wardrobes</string>
    <string name="fwpz_tv10" translatable="false">Gym</string>
    <string name="fwpz_tv11" translatable="false">swimming pool</string>
    <string name="fwpz_tv12" translatable="false">spa</string>
    <string name="fwpz_tv13" translatable="false">Garden</string>
    <string name="fwpz_tv14" translatable="false">Walk-in Closet</string>
    <string name="houses_tv59" translatable="false">Address</string>
    <string name="houses_tv1" translatable="false">I want to rent</string>
    <string name="houses_tv2" translatable="false">I want to sell</string>
    <string name="houses_tv3" translatable="false">House association</string>
    <string name="houses_tv4" translatable="false">Please enter the association number</string>
    <string name="houses_tv5" translatable="false">Listing ownership</string>
    <string name="houses_tv6" translatable="false">POA</string>
    <string name="houses_tv7" translatable="false">owner</string>
    <string name="houses_tv8" translatable="false">POA copy</string>
    <string name="houses_tv9" translatable="false">POA passprot</string>
    <string name="houses_tv10" translatable="false">POA Visa</string>
    <string name="houses_tv2_4" translatable="false">Consent of Housing leasing agency</string>
    <string name="houses_tv11" translatable="false">POA EID</string>
    <string name="houses_tv12" translatable="false">Title Deed</string>
    <string name="houses_tv13" translatable="false">Owner passport copy</string>
    <string name="houses_tv14" translatable="false">Form A confirm</string>
    <string name="houses_tv15" translatable="false">floor plan (optional)</string>
    <string name="houses_tv16" translatable="false">General information</string>
    <string name="houses_tv17" translatable="false">Property type</string>
    <string name="houses_tv18" translatable="false">Property area</string>
    <string name="houses_tv19" translatable="false">Community name</string>
    <string name="houses_tv20" translatable="false">Please enter community name</string>
    <string name="houses_tv21" translatable="false">building name</string>
    <string name="houses_tv22" translatable="false">Please enter building name</string>
    <string name="houses_tv25" translatable="false">Unit</string>
    <string name="forget_pwd_tv2" translatable="false">please enter verification code</string>
    <string name="zdyd_tv4" translatable="false">paymentMethod</string>
    <string name="app_tv31" translatable="false">The password is successfully modified, and you will be automatically redirected to the login page.</string>
    <string name="app_tv32" translatable="false">I know</string>
    <string name="settlement_1" translatable="false">Payment amount</string>
    <string name="settlement_2" translatable="false">Payment date</string>
    <string name="settlement_3" translatable="false">Bank</string>
    <string name="settlement_4" translatable="false">Order number</string>
    <string name="settlement_5" translatable="false">Electronic invoice</string>
    <string name="settlement_6" translatable="false">Click to view</string>
    <string name="settlement_7" translatable="false">trading status</string>
    <string name="settlement_8" translatable="false">If you have any questions, please contact customer service in time.</string>
    <string name="settlement_9" translatable="false">Successful transaction</string>
    <string name="msg_type2" translatable="false">key handover</string>
    <string name="msg_type3" translatable="false">dispatch status</string>
    <string name="msg_type5" translatable="false">successful handover</string>
    <string name="msg_type6" translatable="false">successful delivery</string>
    <string name="heihei_tv14" translatable="false">Hand over:</string>
    <string name="heihei_tv15" translatable="false">Receiver:</string>
    <string name="heihei_tv49" translatable="false">Please enter a new phone number</string>
    <string name="heihei_tv63" translatable="false">handover date:</string>
    <string name="heihei_tv64" translatable="false">grounding point:</string>
</resources>