<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#fff"
    android:layout_height="match_parent"
    >

    <include android:layout_height="wrap_content"
        android:layout_width="match_parent"
        layout="@layout/toolbar"
        android:id="@id/toolbar"/>

    <TextView
        android:textColor="#323232"
        android:layout_width="wrap_content"
        android:paddingBottom="35px"
        android:paddingTop="35px"
        android:textSize="30px"
        android:paddingLeft="30px"
        android:paddingRight="30px"
        android:text="东城民居"
        android:id="@+id/name_tv"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f5f5f5"
        android:visibility="gone"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        />

    <LinearLayout
        android:visibility="gone"
        android:paddingBottom="40px"
        android:paddingTop="40px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="30px">

        <TextView
            android:textColor="#999999"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="28px"
            android:paddingLeft="30px"
            android:paddingRight="30px"
            android:text="@string/settlement_1"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="#323232"
            android:layout_width="wrap_content"
            android:textSize="28px"
            android:paddingLeft="30px"
            android:id="@+id/ye_tv"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f5f5f5"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        />
    <LinearLayout
        android:paddingBottom="40px"
        android:paddingTop="40px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="30px">

        <TextView
            android:textColor="#999999"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="28px"
            android:paddingLeft="30px"
            android:paddingRight="30px"
            android:text="@string/settlement_2"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="#464646"
            android:textSize="28px"
            android:layout_width="wrap_content"
            android:paddingLeft="30px"
            android:id="@+id/fkrq_tv"
            android:text="2018年12月21日 12:00"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:paddingBottom="40px"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="30px">

        <TextView
            android:textColor="#999999"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="30px"
            android:paddingLeft="30px"
            android:paddingRight="30px"
            android:text="@string/settlement_3"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="#464646"
            android:textSize="28px"
            android:layout_width="wrap_content"
            android:paddingLeft="30px"
            android:text="平安银行"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:paddingBottom="40px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="30px">

        <TextView
            android:textColor="#999999"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="28px"
            android:paddingLeft="30px"
            android:paddingRight="30px"
            android:text="@string/zdyd_tv4"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="#464646"
            android:textSize="28px"
            android:layout_width="wrap_content"
            android:paddingLeft="30px"
            android:text="在线支付"
            android:id="@+id/zffs_tv"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:paddingBottom="40px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="30px">

        <TextView
            android:textColor="#999999"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="28px"
            android:paddingLeft="30px"
            android:paddingRight="30px"
            android:text="@string/settlement_4"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="#464646"
            android:textSize="28px"
            android:layout_width="wrap_content"
            android:paddingLeft="30px"
            android:id="@+id/id_tv"
            android:text=""
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:paddingBottom="40px"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="30px">

        <TextView
            android:textColor="#999999"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="28px"
            android:paddingLeft="30px"
            android:paddingRight="30px"
            android:text="@string/settlement_5"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="#3cc37f"
            android:layout_width="wrap_content"
            android:textSize="30px"
            android:paddingLeft="30px"
            android:text="@string/settlement_6"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_width="12px"
            android:layout_height="22px"
            android:background="@mipmap/enter"
            android:layout_gravity="center"
            android:layout_marginLeft="20px"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f5f5f5"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        />
    <LinearLayout
        android:paddingBottom="40px"
        android:paddingTop="40px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="30px">

        <TextView
            android:textColor="#999999"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="28px"
            android:paddingLeft="30px"
            android:paddingRight="30px"
            android:text="@string/settlement_7"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="#3cc37f"
            android:layout_width="wrap_content"
            android:textSize="28px"
            android:id="@+id/jyzt"
            android:paddingLeft="30px"
            android:text="@string/settlement_9"
            android:layout_gravity="center"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:textColor="#999999"
        android:layout_width="match_parent"
        android:textSize="24px"
        android:paddingLeft="30px"
        android:paddingRight="30px"
        android:paddingBottom="60px"
        android:text="@string/settlement_8"
        android:gravity="bottom|center_horizontal"
        android:layout_height="match_parent" />
</LinearLayout>