<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="30px"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="28px"
            android:text="@string/msg_type2"
            android:textColor="#3c3c3c"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28px"
            android:layout_marginLeft="30px"
            android:text="@string/msg_type5"
            android:textColor="#00b660" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f5f5f5"
        android:layout_marginBottom="36px"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30px"
        android:paddingRight="30px"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28px"
            android:text="@string/heihei_tv14"
            android:textColor="#666666" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28px"

            android:layout_marginLeft="18px"
            android:gravity="center_vertical"
            android:id="@+id/details1_tv1"
            android:textColor="#3c3c3c" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36px"
        android:paddingLeft="30px"
        android:gravity="center_vertical"
        android:paddingRight="30px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28px"
            android:text="@string/heihei_tv15"
            android:textColor="#666666" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28px"

            android:id="@+id/details1_tv2"
            android:layout_marginLeft="18px"
            android:textColor="#3c3c3c" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36px"
        android:gravity="center_vertical"
        android:paddingLeft="30px"
        android:paddingRight="30px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28px"
            android:text="@string/heihei_tv63"
            android:textColor="#666666" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28px"

            android:text=""
            android:layout_marginLeft="18px"
            android:id="@+id/details1_tv3"
            android:textColor="#3c3c3c" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36px"
        android:paddingLeft="30px"
        android:gravity="center_vertical"
        android:paddingRight="30px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28px"
            android:text="@string/heihei_tv64"
            android:textColor="#666666" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28px"
            android:text=""
            android:layout_marginLeft="18px"
            android:id="@+id/details1_tv4"
            android:textColor="#3c3c3c" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="20px"
        android:layout_marginTop="36px"
        android:background="#f5f5f5"/>
</LinearLayout>