<?xml version="1.0" encoding="utf-8"?>
<com.ysgj.percent.PercentLinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15.5sp"
        android:textColor="#5a5a5a"
        android:text="@string/prompt"
        android:id="@+id/title"
        app:layout_marginPercent="5.32%w"
        android:layout_gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f5f5f5"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textColor="#5a5a5a"
        android:text="@string/app_tv31"
        app:layout_paddingLeftPercent="4.52%w"
        app:layout_paddingRightPercent="4.52%w"
        android:gravity="center"
        android:id="@+id/content"
        app:layout_marginBottomPercent="8%w"
        app:layout_marginTopPercent="8%w"
        android:layout_gravity="center"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f5f5f5"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15.5sp"
        android:gravity="center"
        android:textColor="#1bbd70"
        android:text="@string/app_tv32"
        android:id="@+id/ok"
        app:layout_marginPercent="4.65%w"
        android:layout_gravity="center"/>
</com.ysgj.percent.PercentLinearLayout>