<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="30px"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="28px"
            android:text="@string/msg_type3"
            android:id="@+id/details2_title"
            android:textColor="#3c3c3c"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28px"
            android:text="@string/msg_type6"
            android:textColor="#00b660"
            android:id="@+id/details2_status"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f5f5f5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="28px"
        android:paddingBottom="28px"
        android:paddingLeft="30px"
        android:paddingRight="30px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28px"
            android:text="@string/deliverydetails_tv11"
            android:textColor="#666666" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="28px"
            android:gravity="right"
            android:maxLines="2"
            android:text=""
            android:id="@+id/tv1"
            android:textColor="#3c3c3c" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30px"
        android:background="#f5f5f5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="28px"
        android:paddingBottom="28px"
        android:paddingLeft="30px"
        android:paddingRight="30px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28px"
            android:text="@string/deliverydetails_tv1"
            android:textColor="#666666" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="28px"
            android:gravity="right"
            android:maxLines="2"
            android:text=""
            android:id="@+id/tv2"
            android:textColor="#3c3c3c" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30px"
        android:background="#f5f5f5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="28px"
        android:paddingBottom="28px"
        android:paddingLeft="30px"
        android:paddingRight="30px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28px"
            android:text="@string/deliverydetails_tv2"
            android:textColor="#666666" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="28px"
            android:maxLines="2"
            android:gravity="right"
            android:text=""
            android:id="@+id/tv3"
            android:textColor="#3c3c3c" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30px"
        android:background="#f5f5f5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="28px"
        android:paddingBottom="28px"
        android:paddingLeft="30px"
        android:paddingRight="30px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28px"
            android:text="@string/deliverydetails_tv3"
            android:textColor="#666666" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="28px"
            android:gravity="right"
            android:text=""
            android:id="@+id/tv4"
            android:layout_marginLeft="30px"
            android:maxLines="2"
            android:textColor="#3c3c3c" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="20px"
        android:layout_marginTop="36px"
        android:background="#f5f5f5"/>
</LinearLayout>