<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#fff"
    android:layout_height="match_parent">

    <include android:layout_height="wrap_content"
        android:layout_width="match_parent"
        layout="@layout/toolbar"
        android:id="@id/toolbar"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/heihei_tv49"
            android:gravity="center_vertical"
            android:textSize="28px"
            android:textColor="#373737"
            android:inputType="number"
            android:textColorHint="#bfbfbf"
            android:paddingLeft="30px"
            android:paddingRight="30px"
            android:paddingTop="36px"
            android:paddingBottom="36px"
            android:id="@+id/phone"
            android:textCursorDrawable="@drawable/edit_cursor"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="#26bd73"
            android:text="@string/forgetpwd_tv2"
            android:layout_gravity="center"
            android:gravity="center"
            android:maxLength="12"
            android:textSize="28px"
            android:id="@+id/send_code"
            android:paddingRight="30px"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f5f5f5"
        android:layout_below="@id/toolbar_title"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/forget_pwd_tv2"
        android:gravity="center_vertical"
        android:textSize="28px"
        android:textColor="#373737"
        android:inputType="number"
        android:id="@+id/code"
        android:textColorHint="#bfbfbf"
        android:paddingLeft="30px"
        android:paddingRight="30px"
        android:paddingTop="36px"
        android:paddingBottom="36px"

        android:textCursorDrawable="@drawable/edit_cursor"
        />

    <LinearLayout
        android:background="#f0f0f0"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:text="@string/bt_qd"
            android:gravity="center"
            android:textSize="32px"
            android:paddingTop="30px"
            android:layout_marginTop="80px"
            android:paddingBottom="30px"
            android:id="@+id/updatephone_bt"
            android:background="@drawable/update_pwd_bt"
            />

    </LinearLayout>
</LinearLayout>